@@ -1,7 +1,7 @@
 	processor 16f877a
 
 	extern	c1, c2
-	global	c3, d3, d4, code2
+	global	c3, d3, d4, d5, code2
 
 .code3	code 0
 	nop
@@ -12,13 +12,28 @@ c3	nop
 	pagesel $-1
 	pagesel $
 
+	banksel d3
+	banksel d4
+	banksel d5
+
+	bankisel d3
+	bankisel d4
+	bankisel d5
+
+	dw d5
+	dw id1
+
 .data3	udata 0x30
 	res 1
 d3	res 1
 
-.data4	udata 0x38
+.data4	udata 0xa0
 	res 1
 d4	res 1
+
+.data5	udata 0x120
+	res 1
+d5	res 1
 
 	;; This tests symbol value adjustment when the section is
 	;; relocated.
@@ -27,9 +42,9 @@ d4	res 1
 c5	goto c5
 	dw c5
 
-.data5	idata
+.idata1	idata
 	db 1
-d5	db $,3
+id1	db $,3
 	dw $-1
 	dw c1
 
